# project-greenlight

./: .env.example  .gitignore  CLAUDE.md  Knew-Code-Context.md  README.md  SYMBOLIC_NOTATION_ANALYSIS.md  greenlight.bat  launch.bat  launch_backend.bat  launch_frontend.bat  ports.bat  pyproject.toml  requirements.txt  setup.bat  stop.bat  test_ingestion.py  test_madame_chou.py  test_outline_generator.py  test_visual_styles.py  test_z_image.py
.claude/: settings.json  settings.local.json
.claude/commands/: checkpoint.md  load-context.md  quora.md  set-project-context.md  status.md  sync-context.md  walkthrough.md
.claude/skills/: checkpoint.md  context-sync.md  quora.md  walkthrough.md
_CONTEXT/00_●_READ_FIRST_ALWAYS/: CONSENT_PROTOCOL.md  GLYPH_DICTIONARY.md  PRIME_DIRECTIVE.md
_CONTEXT/01_🎯_PRIMARY_GOAL/: BOUNDARIES.md  GOAL_DEFINITION.md  OPERATIONAL_FUNCTIONS.md  SUCCESS_CRITERIA.md
_CONTEXT/02_⚓_PROJECT_CONTEXT_IMMUTABLE/: ARCHITECTURE.md  GLOSSARY.md  MODEL_REGISTRY.md  (+2 more)
_LEARNING/: CONCEPTS_EXPLAINED.md  QUORA_INSIGHTS.md  SKILLS_DEVELOPED.md  USER_LEARNING_RECORD.md
_LOGS/: CHANGELOG.md  DECISION_LOG.md
_OPERATIONS/: TASK_STATE_MACHINE.md  TODO.md
_SESSIONS/: CONVERSATION_LOG.md  SESSION_INDEX.md
greenlight/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_cinestage.py  test_cinestage_batched.py  test_director_tuning.py  test_full_edit_pipeline.py  test_icb.py  test_nano_banana.py  test_reference_gen.py  test_world_builder.py
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+77 files in other folders)
